--- a/.env
+++ b/.env
@@ -3,5 +3,7 @@ POSTGRES_PASSWORD=qwerty123
 POSTGRES_DB=buildingDB
 POSTGRES_PORT=5432
 AUTH_SERVICE_PORT=8080
+HUB_SERVICE_PORT=8081
+CLIENT_SERVICE_PORT=8082
 ACCESS_SECRET=my-access-secret
 REFRESH_SECRET=my-refresh-secret
